# personal_llm

./: .flake8  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  training_data.json
pdfs/: Calculus_Stewart.txt  cached_lm_GPT2Tokenizer_128_Calculus_Stewart.txt
src/: __init__.py  config.py
src/controllers/: __init__.py  fine_tune.py  health.py  home.py  websocket.py
src/lib/: constants.py  loggers.py
src/services/: __init__.py  fine_tune.py  generate.py
src/static/: style.css
src/templates/: index.html
ui/: package-lock.json  package.json
ui/src/: App.css  App.js
ui/src/components/: FineTune.js  Home.js  RunModel.js
