[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Jpifer13 <jakepifer3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.42.4"
datasets = "^2.20.0"
torch = "^2.3.1"
fastapi = "^0.111.0"
accelerate = "^0.32.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
